--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,13 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_gray">#F5F5F5</color>
+    <color name="dark_bg">#121212</color>
+    <color name="purple_500">#6200EE</color>
+    <color name="purple_200">#BB86FC</color>
+    <color name="purple_700">#512DA8</color>
+    <color name="purple_400">#7E57C2</color>
+    <color name="purple_100">#D1C4E9</color>
+    <color name="red">#E53935</color>
+
 </resources>
