--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,13 @@
         android:name="com.example.habitforge.presentation.activity.ui.equipment.EquipmentFragment"
         android:label="@string/menu_equipment"
         tools:layout="@layout/fragment_equipment" />
+    <fragment
+        android:id="@+id/nav_user_list"
+        android:name="com.example.habitforge.presentation.activity.ui.userlist.UserListFragment"
+        android:label="User List">
+
+        <action
+            android:id="@+id/action_userListFragment_to_galleryFragment"
+            app:destination="@id/nav_profile" />
+    </fragment>
 </navigation>
