--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,12 @@
         <item name="android:layout_margin">4dp</item>
         <item name="android:padding">10dp</item>
     </style>
+    <style name="DetailTextStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/dark_bg</item>
+        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+
+    </style>
 </resources>
