--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -31,4 +31,14 @@
             android:id="@+id/action_userListFragment_to_galleryFragment"
             app:destination="@id/nav_profile" />
     </fragment>
+    <fragment
+        android:id="@+id/nav_user_progress"
+        android:name="com.example.habitforge.presentation.activity.ui.progress.UserProgressFragment"
+        android:label="@string/menu_userProgress"
+        tools:layout="@layout/fragment_user_progress" />
+    <fragment
+        android:id="@+id/nav_friend_request"
+        android:name="com.example.habitforge.presentation.activity.ui.friendRequest.FriendRequestFragment"
+        android:label="@string/menu_friend_request"
+        tools:layout="@layout/fragment_friend_request" />
 </navigation>
