--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -8,7 +8,11 @@
     android:background="@drawable/white_rounded_bg"
     android:layout_marginVertical="4dp"
     android:gravity="center_vertical">
-
+    <CheckBox
+        android:id="@+id/checkbox_select_user"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
     <ImageView
         android:id="@+id/image_avatar"
         android:layout_width="60dp"
