--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -41,4 +41,9 @@
         android:name="com.example.habitforge.presentation.activity.ui.friendRequest.FriendRequestFragment"
         android:label="@string/menu_friend_request"
         tools:layout="@layout/fragment_friend_request" />
+    <fragment
+        android:id="@+id/nav_alliance"
+        android:name="com.example.habitforge.presentation.activity.ui.alliance.AllianceFragment"
+        android:label="@string/menu_alliance"
+        tools:layout="@layout/fragment_alliance" />
 </navigation>
