--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -137,6 +137,15 @@
             android:textSize="18sp"
             android:textStyle="bold"
             android:layout_marginTop="8dp" />
+        <TextView
+        android:id="@+id/text_badge_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Broj bedževa: 0"
+        android:textColor="#444"
+        android:textSize="16sp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginTop="4dp" />
 
         <TextView
             android:id="@+id/text_badges"
@@ -145,6 +154,16 @@
             android:text="Nema bedževa"
             android:textColor="#333"
             android:layout_marginBottom="12dp" />
+
+        <LinearLayout
+            android:id="@+id/layout_badge_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginBottom="12dp"
+            android:layout_marginTop="4dp"
+            android:padding="4dp" />
 
         <!-- Oprema -->
         <TextView
